--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ img{
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+  border-radius: 50%;
 }
 
 .column {
@@ -27,11 +28,26 @@ img{
   width: 12.5%;
   padding: 5px;
 }
-container{
-  justify-content: center;
-  display: flex;
-  left:22%;
+.container{
+  overflow: hidden;
 }
+
+.filterDiv {
+   width: 260px;
+ height: 350px;
+ background-color: #1a1a1a;
+ border-radius: 20px;
+  float: left;
+  margin: 12px;
+  overflow: hidden;
+}
+.show {
+  display: block;
+}
+.hide {
+  display: none;
+}
+
 
 a{
   font-family: 'Roboto Mono';
@@ -43,6 +59,7 @@ h4{
   font-size: 15px;
   color:white;
   text-align: center;
+  line-height: 5px;
 
 }
 
@@ -172,4 +189,72 @@ color:white;
 
 .card:hover {
  box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+}
+.myDIV{
+  text-align: center;
+  margin: 0px;
+  display:inline-block;
+  position:relative;
+  padding:0px;
+  border:0px;
+}
+.myDIV:hover + .hide {
+  display: block;
+  font-family: 'Roboto Mono';
+  font-size: 10px;
+  color:white;
+  text-align: center;
+}
+
+.popup {
+    background-color: black;
+    z-index: 99 !important;
+    width: 420px;
+    padding: 30px 40px;
+    position: fixed;
+    transform: translate(-50%,-50%);
+    left: 50%;
+    top: 50%;
+    border-radius: 8px;
+    font-family: "Roboto Mono",sans-serif;
+    display: none; 
+    text-align: center;
+}
+.popup h1 {
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-family: 'Roboto Mono';
+    color:#fff;
+}
+.popup h2 {
+  text-align: center;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-family: 'Roboto Mono';
+    color:#fff;
+}
+.popup .close {
+    position: sticky;
+    top: 20px;
+    right: 30px;
+    transition: all 200ms;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #fff;
+}
+
+.popup .close:hover {
+    color:black;
+}
+
+.popup .content {
+    max-height: 30%;
+    overflow: auto;
+}
+
+.tablecenter{
+  margin-left: 40%;
 }
